--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -1,3 +1,7 @@
 fixtures:
+  repositories:
+    stdlib:
+      repo: "https://github.com/puppetlabs/puppetlabs-stdlib.git"
+      ref:  "3.0.0"
   symlinks:
       users: "#{source_dir}"
