Add acceptance tests

--- a/.hgignore
+++ b/.hgignore
@@ -1,7 +1,11 @@
+\.rake_task.*
 .*\.swp
 .*\.swo
 \.gemfile.lock
 pkg/
 spec/fixtures/
+log/
+\.vagrant/
+\.bundle
+Gemfile.lock
 \.git
-\.gitignore
