--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -4,10 +4,15 @@ AllCops:
   Include:
     - ./**/*.rb
   Exclude:
+    - files/**/*
     - vendor/**/*
     - .vendor/**/*
     - pkg/**/*
     - spec/fixtures/**/*
+    - Gemfile
+    - Rakefile
+    - Guardfile
+    - Vagrantfile
 Lint/ConditionPosition:
   Enabled: True
 
@@ -41,13 +46,16 @@ Style/HashSyntax:
 Style/RedundantReturn:
   Enabled: True
 
+Layout/EndOfLine:
+  Enabled: False
+
 Lint/AmbiguousOperator:
   Enabled: True
 
 Lint/AssignmentInCondition:
   Enabled: True
 
-Style/SpaceBeforeComment:
+Layout/SpaceBeforeComment:
   Enabled: True
 
 Style/AndOr:
@@ -55,6 +63,9 @@ Style/AndOr:
 
 Style/RedundantSelf:
   Enabled: True
+
+Metrics/BlockLength:
+  Enabled: False
 
 # Method length is not necessarily an indicator of code quality
 Metrics/MethodLength:
@@ -70,7 +81,7 @@ Style/WhileUntilModifier:
 Lint/AmbiguousRegexpLiteral:
   Enabled: True
 
-Lint/Eval:
+Security/Eval:
   Enabled: True
 
 Lint/BlockAlignment:
@@ -112,7 +123,7 @@ Lint/UselessAssignment:
 Lint/Void:
   Enabled: True
 
-Style/AccessModifierIndentation:
+Layout/AccessModifierIndentation:
   Enabled: True
 
 Style/AccessorMethodName:
@@ -121,13 +132,13 @@ Style/AccessorMethodName:
 Style/Alias:
   Enabled: True
 
-Style/AlignArray:
+Layout/AlignArray:
   Enabled: True
 
-Style/AlignHash:
+Layout/AlignHash:
   Enabled: True
 
-Style/AlignParameters:
+Layout/AlignParameters:
   Enabled: True
 
 Metrics/BlockNesting:
@@ -145,7 +156,7 @@ Style/BracesAroundHashParameters:
 Style/CaseEquality:
   Enabled: True
 
-Style/CaseIndentation:
+Layout/CaseIndentation:
   Enabled: True
 
 Style/CharacterLiteral:
@@ -179,64 +190,64 @@ Style/WordArray:
 Style/UnneededPercentQ:
   Enabled: True
 
-Style/Tab:
+Layout/Tab:
   Enabled: True
 
-Style/SpaceBeforeSemicolon:
+Layout/SpaceBeforeSemicolon:
   Enabled: True
 
-Style/TrailingBlankLines:
+Layout/TrailingBlankLines:
   Enabled: True
 
-Style/SpaceInsideBlockBraces:
+Layout/SpaceInsideBlockBraces:
   Enabled: True
 
-Style/SpaceInsideBrackets:
+Layout/SpaceInsideBrackets:
   Enabled: True
 
-Style/SpaceInsideHashLiteralBraces:
+Layout/SpaceInsideHashLiteralBraces:
   Enabled: True
 
-Style/SpaceInsideParens:
+Layout/SpaceInsideParens:
   Enabled: True
 
-Style/LeadingCommentSpace:
+Layout/LeadingCommentSpace:
   Enabled: True
 
-Style/SpaceBeforeFirstArg:
+Layout/SpaceBeforeFirstArg:
   Enabled: True
 
-Style/SpaceAfterColon:
+Layout/SpaceAfterColon:
   Enabled: True
 
-Style/SpaceAfterComma:
+Layout/SpaceAfterComma:
   Enabled: True
 
-Style/SpaceAfterMethodName:
+Layout/SpaceAfterMethodName:
   Enabled: True
 
-Style/SpaceAfterNot:
+Layout/SpaceAfterNot:
   Enabled: True
 
-Style/SpaceAfterSemicolon:
+Layout/SpaceAfterSemicolon:
   Enabled: True
 
-Style/SpaceAroundEqualsInParameterDefault:
+Layout/SpaceAroundEqualsInParameterDefault:
   Enabled: True
 
-Style/SpaceAroundOperators:
+Layout/SpaceAroundOperators:
   Enabled: True
 
-Style/SpaceBeforeBlockBraces:
+Layout/SpaceBeforeBlockBraces:
   Enabled: True
 
-Style/SpaceBeforeComma:
+Layout/SpaceBeforeComma:
   Enabled: True
 
 Style/CollectionMethods:
   Enabled: True
 
-Style/CommentIndentation:
+Layout/CommentIndentation:
   Enabled: True
 
 Style/ColonMethodCall:
@@ -261,7 +272,7 @@ Style/DefWithParentheses:
 Style/PreferredHashMethods:
   Enabled: True
 
-Style/DotPosition:
+Layout/DotPosition:
   EnforcedStyle: trailing
 
 Style/DoubleNegation:
@@ -270,25 +281,25 @@ Style/DoubleNegation:
 Style/EachWithObject:
   Enabled: True
 
-Style/EmptyLineBetweenDefs:
+Layout/EmptyLineBetweenDefs:
   Enabled: True
 
-Style/IndentArray:
+Layout/IndentArray:
   Enabled: True
 
-Style/IndentHash:
+Layout/IndentHash:
   Enabled: True
 
-Style/IndentationConsistency:
+Layout/IndentationConsistency:
   Enabled: True
 
-Style/IndentationWidth:
+Layout/IndentationWidth:
   Enabled: True
 
-Style/EmptyLines:
+Layout/EmptyLines:
   Enabled: True
 
-Style/EmptyLinesAroundAccessModifier:
+Layout/EmptyLinesAroundAccessModifier:
   Enabled: True
 
 Style/EmptyLiteral:
@@ -298,7 +309,7 @@ Style/EmptyLiteral:
 Metrics/LineLength:
   Enabled: False
 
-Style/MethodCallParentheses:
+Style/MethodCallWithoutArgsParentheses:
   Enabled: True
 
 Style/MethodDefParentheses:
@@ -307,7 +318,7 @@ Style/MethodDefParentheses:
 Style/LineEndConcatenation:
   Enabled: True
 
-Style/TrailingWhitespace:
+Layout/TrailingWhitespace:
   Enabled: True
 
 Style/StringLiterals:
@@ -459,9 +470,6 @@ Metrics/ParameterLists:
 Lint/RequireParentheses:
   Enabled: True
 
-Style/SpaceBeforeFirstArg:
-  Enabled: True
-
 Style/ModuleFunction:
   Enabled: True
 
@@ -477,7 +485,7 @@ Style/Encoding:
 Style/BlockDelimiters:
   Enabled: True
 
-Style/MultilineBlockLayout:
+Layout/MultilineBlockLayout:
   Enabled: True
 
 # 'Complexity' is very relative
@@ -491,10 +499,14 @@ Metrics/PerceivedComplexity:
 Lint/UselessAssignment:
   Enabled: True
 
-Style/ClosingParenthesisIndentation:
-  Enabled: False
+Layout/ClosingParenthesisIndentation:
+  Enabled: True
 
 # RSpec
+
+RSpec/BeforeAfterAll:
+  Exclude:
+    - spec/acceptance/**/*
 
 # We don't use rspec in this way
 RSpec/DescribeClass:
@@ -506,3 +518,28 @@ RSpec/ExampleLength:
 
 RSpec/NamedSubject:
   Enabled: False
+
+# disabled for now since they cause a lot of issues
+# these issues aren't easy to fix
+RSpec/RepeatedDescription:
+  Enabled: False
+
+RSpec/NestedGroups:
+  Enabled: False
+
+# this is broken on ruby1.9
+Layout/IndentHeredoc:
+  Enabled: False
+
+# disable Yaml safe_load. This is needed to support ruby2.0.0 development envs
+Security/YAMLLoad:
+  Enabled: false
+
+# This affects hiera interpolation, as well as some configs that we push.
+Style/FormatStringToken:
+  Enabled: false
+
+# This is useful, but sometimes a little too picky about where unit tests files
+# are located.
+RSpec/FilePath:
+  Enabled: false
