--- a/spec/acceptance/nodesets/debian-8-x64.yml
+++ b/spec/acceptance/nodesets/debian-8-x64.yml
@@ -1,11 +1,16 @@
+---
+# This file is managed via modulesync
+# https://github.com/voxpupuli/modulesync
+# https://github.com/voxpupuli/modulesync_config
 HOSTS:
   debian-8-x64:
     roles:
       - agent
-      - default
     platform: debian-8-amd64
-    hypervisor: vagrant
-    box_url: http://images.phononet.local/vagrant/jessie64/
     box: jessie64
+    box_url: http://images.phononet.local/vagrant/jessie64/
+    hypervisor: vagrant
 CONFIG:
   type: foss
+...
+# vim: syntax=yaml
