--- a/spec/acceptance/nodesets/default.yml
+++ b/spec/acceptance/nodesets/default.yml
@@ -1,11 +1,16 @@
+---
+# This file is managed via modulesync
+# https://github.com/voxpupuli/modulesync
+# https://github.com/voxpupuli/modulesync_config
 HOSTS:
-  debian-8-x64:
+  debian-9-x64:
     roles:
       - agent
-      - default
-    platform: debian-8-amd64
+    platform: debian-9-amd64
+    box_url: http://images.phononet.local/vagrant/stretch64/
+    box: stretch64
     hypervisor: vagrant
-    box_url: http://images.phononet.local/vagrant/jessie64/
-    box: jessie64
 CONFIG:
   type: foss
+...
+# vim: syntax=yaml
