--- a/spec/acceptance/nodesets/docker/centos-5.yml
+++ b/spec/acceptance/nodesets/docker/centos-5.yml
@@ -3,16 +3,15 @@
 # https://github.com/voxpupuli/modulesync
 # https://github.com/voxpupuli/modulesync_config
 HOSTS:
-  debian-8-x64:
-    platform: debian-8-amd64
+  centos-5-x64:
+    platform: el-5-x86_64
     hypervisor: docker
-    image: debian:jessie
+    image: centos:5
     docker_preserve_image: true
     docker_cmd: '["/sbin/init"]'
     docker_image_commands:
-      - 'apt-get update && apt-get install -y cron locales-all net-tools wget'
-      - 'rm -f /usr/sbin/policy-rc.d'
-      - 'systemctl mask getty@tty1.service getty-static.service'
+      - 'yum install -y crontabs initscripts iproute openssl sysvinit-tools tar wget which'
+      - 'sed -i -e "/mingetty/d" /etc/inittab'
 CONFIG:
   trace_limit: 200
   masterless: true
