--- a/spec/acceptance/nodesets/docker/centos-6.yml
+++ b/spec/acceptance/nodesets/docker/centos-6.yml
@@ -3,16 +3,16 @@
 # https://github.com/voxpupuli/modulesync
 # https://github.com/voxpupuli/modulesync_config
 HOSTS:
-  debian-8-x64:
-    platform: debian-8-amd64
+  centos-6-x64:
+    platform: el-6-x86_64
     hypervisor: docker
-    image: debian:jessie
+    image: centos:6
     docker_preserve_image: true
     docker_cmd: '["/sbin/init"]'
     docker_image_commands:
-      - 'apt-get update && apt-get install -y cron locales-all net-tools wget'
-      - 'rm -f /usr/sbin/policy-rc.d'
-      - 'systemctl mask getty@tty1.service getty-static.service'
+      - 'rm -rf /var/run/network/*'
+      - 'yum install -y crontabs initscripts iproute openssl sysvinit-tools tar wget which'
+      - 'rm /etc/init/tty.conf'
 CONFIG:
   trace_limit: 200
   masterless: true
