--- a/spec/acceptance/nodesets/docker/ubuntu-16.04.yml
+++ b/spec/acceptance/nodesets/docker/ubuntu-16.04.yml
@@ -3,16 +3,15 @@
 # https://github.com/voxpupuli/modulesync
 # https://github.com/voxpupuli/modulesync_config
 HOSTS:
-  debian-8-x64:
-    platform: debian-8-amd64
+  ubuntu-1604-x64:
+    platform: ubuntu-16.04-amd64
     hypervisor: docker
-    image: debian:jessie
+    image: ubuntu:xenial
     docker_preserve_image: true
     docker_cmd: '["/sbin/init"]'
     docker_image_commands:
-      - 'apt-get update && apt-get install -y cron locales-all net-tools wget'
-      - 'rm -f /usr/sbin/policy-rc.d'
-      - 'systemctl mask getty@tty1.service getty-static.service'
+      - 'apt-get install -y net-tools wget locales apt-transport-https'
+      - 'locale-gen en_US.UTF-8'
 CONFIG:
   trace_limit: 200
   masterless: true
