--- a/spec/acceptance/nodesets/ubuntu-1404-x64-nocm.yml
+++ b/spec/acceptance/nodesets/ubuntu-1404-x64-nocm.yml
@@ -3,12 +3,12 @@
 # https://github.com/voxpupuli/modulesync
 # https://github.com/voxpupuli/modulesync_config
 HOSTS:
-  debian-7-x64:
+  ubuntu-1404-x64:
     roles:
       - agent
-    platform: debian-7-amd64
-    box: wheezy64
-    box_url: http://images.phononet.local/vagrant/wheezy64/
+    platform: ubuntu-14.04-amd64
+    box: trusty64
+    box_url: ubuntu/trusty64
     hypervisor: vagrant
 CONFIG:
   type: foss
